--- a/package.json
+++ b/package.json
@@ -3,12 +3,15 @@
   "name": "darkwarhouse.io",
   "version": "0.0.0",
   "license": "MIT",
+  "homepage": "https://toasted-marshmallow-co.github.io",
   "scripts": {
     "build": "preact build",
     "serve": "sirv build --port 8080 --cors --single",
     "dev": "preact watch",
     "lint": "eslint src",
-    "test": "jest"
+    "test": "jest",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "preact",
