--- a/push-manifest.json
+++ b/push-manifest.json
@@ -1,1 +1,1 @@
-{"/":{"bundle.ee26a.css":{"type":"style","weight":1},"bundle.19d3c.esm.js":{"type":"script","weight":1},"route-home.chunk.1b7e3.esm.js":{"type":"script","weight":0.9},"3.chunk.eb893.css":{"type":"style","weight":0.9},"route-home.chunk.1e97a.css":{"type":"style","weight":0.9}}}
+{"/":{"bundle.ee26a.css":{"type":"style","weight":1},"bundle.8a2af.esm.js":{"type":"script","weight":1},"route-home.chunk.f0e41.esm.js":{"type":"script","weight":0.9},"3.chunk.eb893.css":{"type":"style","weight":0.9},"route-home.chunk.1e97a.css":{"type":"style","weight":0.9}}}
