--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "private": true,
-  "name": "darkwarhouse.io",
+  "name": "darkwarehouse.io",
   "version": "0.0.0",
   "license": "MIT",
   "homepage": ".",
