--- a/push-manifest.json
+++ b/push-manifest.json
@@ -1,1 +1,1 @@
-{"/":{"bundle.ee26a.css":{"type":"style","weight":1},"bundle.f88dc.esm.js":{"type":"script","weight":1},"route-home.chunk.c58f4.esm.js":{"type":"script","weight":0.9},"3.chunk.eb893.css":{"type":"style","weight":0.9},"route-home.chunk.1e97a.css":{"type":"style","weight":0.9}}}
+{"/":{"bundle.ee26a.css":{"type":"style","weight":1},"bundle.9ae7a.esm.js":{"type":"script","weight":1},"route-home.chunk.b728a.esm.js":{"type":"script","weight":0.9},"3.chunk.eb893.css":{"type":"style","weight":0.9},"route-home.chunk.1e97a.css":{"type":"style","weight":0.9}}}
