--- a/push-manifest.json
+++ b/push-manifest.json
@@ -1,1 +1,1 @@
-{"/":{"bundle.ee26a.css":{"type":"style","weight":1},"bundle.47a12.esm.js":{"type":"script","weight":1},"route-home.chunk.6f71e.esm.js":{"type":"script","weight":0.9},"route-home.chunk.2ad1a.css":{"type":"style","weight":0.9}}}
+{"/":{"bundle.ee26a.css":{"type":"style","weight":1},"bundle.60696.esm.js":{"type":"script","weight":1},"route-home.chunk.6f71e.esm.js":{"type":"script","weight":0.9},"route-home.chunk.2ad1a.css":{"type":"style","weight":0.9}}}
