--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "DarkWarhouse.io",
-  "short_name": "DarkWarhouse.io",
+  "name": "DarkWarehouse.io",
+  "short_name": "DarkWarehouse.io",
   "start_url": ".",
   "display": "standalone",
   "orientation": "portrait",
