--- a/push-manifest.json
+++ b/push-manifest.json
@@ -1,1 +1,1 @@
-{"/":{"bundle.ee26a.css":{"type":"style","weight":1},"bundle.b5dfa.esm.js":{"type":"script","weight":1},"route-home.chunk.9e3bb.esm.js":{"type":"script","weight":0.9},"route-home.chunk.4ad6c.css":{"type":"style","weight":0.9}}}
+{"/":{"bundle.05e13.css":{"type":"style","weight":1},"bundle.cae91.esm.js":{"type":"script","weight":1},"route-home.chunk.f77b1.esm.js":{"type":"script","weight":0.9},"route-home.chunk.7351d.css":{"type":"style","weight":0.9}}}
