--- a/push-manifest.json
+++ b/push-manifest.json
@@ -1,1 +1,1 @@
-{"/":{"bundle.05e13.css":{"type":"style","weight":1},"bundle.cae91.esm.js":{"type":"script","weight":1},"route-home.chunk.f77b1.esm.js":{"type":"script","weight":0.9},"route-home.chunk.7351d.css":{"type":"style","weight":0.9}}}
+{"/":{"bundle.05e13.css":{"type":"style","weight":1},"bundle.b2d7e.esm.js":{"type":"script","weight":1},"route-home.chunk.e3c76.esm.js":{"type":"script","weight":0.9},"route-home.chunk.448ba.css":{"type":"style","weight":0.9}}}
